# rust-dashcore

./: .codecov.yml  .coderabbit.yaml  .gitignore  .manki.yml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  deny.toml  peer_reputation.json  peers_dash.json
dash/: CLAUDE.md  Cargo.toml  build.rs  cbindgen.toml
dash-network/: Cargo.toml  build.rs  cbindgen.toml
dash-network-seeds/: Cargo.toml
dash-network-seeds/seeds/: mainnet.txt  testnet.txt
dash-network-seeds/src/: lib.rs
dash-network/src/: ffi.rs  lib.rs
dash-spv/: ARCHITECTURE.md  CLAUDE.md  Cargo.toml  README.md  build.rs  clippy.toml  peers_regtest.json
dash-spv-ffi/: CLAUDE.md  Cargo.toml  FFI_API.md  Makefile  README.md  build.rs  cbindgen.toml  dash_spv_ffi.h
dash-spv-ffi/examples/: wallet_manager_usage.rs
dash-spv-ffi/include/: dash_spv_ffi.h
dash-spv-ffi/scripts/: generate_ffi_docs.py
dash-spv-ffi/src/: callbacks.rs  client.rs  config.rs  error.rs  lib.rs  platform_integration.rs  types.rs  utils.rs
dash-spv-ffi/tests/: test_client.rs  test_config.rs  test_error.rs  test_types.rs  test_utils.rs  test_wallet_manager.rs
dash-spv-ffi/tests/c_tests/: test_basic.c
dash-spv-ffi/tests/dashd_sync/: callbacks.rs  context.rs  main.rs  tests_basic.rs  tests_callback.rs  tests_restart.rs  tests_transaction.rs
dash-spv-ffi/tests/integration/: test_full_workflow.rs
dash-spv-ffi/tests/unit/: test_async_operations.rs  test_client_lifecycle.rs  test_configuration.rs  test_error_handling.rs  test_memory_management.rs  test_type_conversions.rs
dash-spv/examples/: diagnose_storage.rs  filter_sync.rs  simple_sync.rs  spv_with_wallet.rs
dash-spv/src/: error.rs  lib.rs  logging.rs  main.rs  mempool_filter.rs  types.rs
dash-spv/src/bridge/: mod.rs
dash-spv/src/chain/: chain_tip.rs  chain_work.rs  chainlock_manager.rs  chainlock_test.rs  checkpoint_test.rs  checkpoints.rs  difficulty.rs  fork_detector.rs  fork_detector_test.rs  mod.rs  reorg.rs  reorg_test.rs
dash-spv/src/client/: block_processor.rs  block_processor_test.rs  chainlock.rs  config.rs  config_test.rs  core.rs  devnet.rs  event_handler.rs  events.rs  filter_sync.rs  interface.rs  lifecycle.rs  mempool.rs  message_handler.rs  message_handler_test.rs  mod.rs  progress.rs  queries.rs  status_display.rs  sync_coordinator.rs  transactions.rs
dash-spv/src/network/: addrv2.rs  constants.rs  discovery.rs  event.rs  handshake.rs  manager.rs  mod.rs  peer.rs  pool.rs  reputation.rs  reputation_tests.rs  required_services.rs  tests.rs
dash-spv/src/storage/: block_headers.rs  blocks.rs  consistency.rs  filter_headers.rs  filters.rs  io.rs  lockfile.rs  memory.rs  metadata.rs  mod.rs  peers.rs  segments.rs  sync_state.rs
dash-spv/src/sync/: download_coordinator.rs  events.rs  (+13 more)
dash-spv/tests/: chainlock_validation_test.rs  edge_case_filter_sync_test.rs  error_handling_test.rs  error_recovery_integration_test.rs  error_types_test.rs  filter_header_verification_test.rs  handshake_test.rs  header_sync_test.rs  node_integration_test.rs  peer_test.rs  test_handshake_logic.rs  test_plan.md  test_regtest_handshake.rs  transaction_calculation_test.rs  wallet_integration_test.rs
dash/examples/: handshake.rs
dash/src/: address.rs  amount.rs  base58.rs  bip143.rs  bip152.rs  bip158.rs  error.rs  hash_types.rs  lib.rs  pow.rs  serde_utils.rs  sign_message.rs  string.rs  taproot.rs
hashes/: CLAUDE.md  Cargo.toml
hashes/src/: error.rs  hash160.rs  hash_x11.rs  hex.rs  hmac.rs  impls.rs  lib.rs  ripemd160.rs  serde_macros.rs  sha1.rs  sha256.rs  sha256d.rs  sha256t.rs  sha512.rs  sha512_256.rs  util.rs
internals/: Cargo.toml
internals/src/: error.rs  lib.rs  macros.rs
key-wallet/: CLAUDE.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md  TODO.md  missing_tests.md
key-wallet-ffi/: CLAUDE.md  Cargo.toml  FFI_API.md  IMPORT_WALLET_FFI.md  Makefile  README.md  build.rs  cbindgen.toml
key-wallet-ffi/examples/: check_transaction.c
key-wallet-ffi/include/: key_wallet_ffi.h
key-wallet-ffi/scripts/: generate_ffi_docs.py
key-wallet-ffi/src/: account.rs  account_collection.rs  account_derivation.rs  account_derivation_tests.rs  account_tests.rs  address.rs  address_pool.rs  address_tests.rs  bip38.rs  derivation.rs  derivation_tests.rs  error.rs  keys.rs  keys_tests.rs  lib.rs  lib_tests.rs  managed_account.rs  managed_account_collection.rs  managed_wallet.rs  managed_wallet_tests.rs  mnemonic.rs  mnemonic_tests.rs  transaction.rs  transaction_checking.rs  transaction_tests.rs  types.rs  utxo.rs  utxo_tests.rs  wallet.rs  wallet_manager.rs  wallet_manager_serialization_tests.rs  wallet_manager_tests.rs  wallet_tests.rs
key-wallet-ffi/tests/: debug_addr.rs  debug_wallet_add.rs  integration_test.rs  test_account_collection.rs  test_addr_simple.rs  test_error_conversions.rs  test_import_wallet.rs  test_managed_account_collection.rs  test_passphrase_wallets.rs
key-wallet-manager/: Cargo.toml  README.md
key-wallet-manager/examples/: wallet_creation.rs
key-wallet-manager/src/: accessors.rs  error.rs  event_tests.rs  events.rs  lib.rs  matching.rs  process_block.rs  rescan.rs  test_helpers.rs  wallet_interface.rs
key-wallet-manager/tests/: integration_test.rs  spv_integration_tests.rs  test_serialized_wallets.rs
key-wallet/examples/: basic_usage.rs  wallet_creation.rs
key-wallet/src/: bip32.rs  bip38.rs  bip38_tests.rs  derivation.rs  derivation_bls_bip32.rs  derivation_slip10.rs  dip9.rs  error.rs  lib.rs  missing_tests.md  mnemonic.rs  seed.rs  signer.rs  utxo.rs  wallet_comprehensive_tests.rs
key-wallet/tests/: address_tests.rs  bip32_tests.rs  derivation_tests.rs  integration_test.rs  mnemonic_tests.rs  spv_integration_tests.rs  test_serialized_wallets.rs
masternode-seeds-fetcher/: Cargo.toml
masternode-seeds-fetcher/src/: main.rs  probe.rs
rpc-client/: CLAUDE.md  Cargo.toml
rpc-client/examples/: connect_to_masternode.rs
rpc-client/src/: client.rs  lib.rs
rpc-integration-test/: Cargo.toml
rpc-integration-test/src/: main.rs
rpc-json/: Cargo.toml
rpc-json/src/: lib.rs
(+304 files in other folders)
