[package]
name = "dash-spv"
version = { workspace = true }
edition = "2021"
authors = ["Dash Core Team"]
description = "Dash SPV (Simplified Payment Verification) client library"
license = "MIT"
repository = "https://github.com/dashpay/rust-dashcore"
rust-version = "1.89"

[dependencies]
# Core Dash libraries
dashcore = { path = "../dash", features = ["std", "serde", "core-block-hash-use-x11", "message_verification", "bls", "quorum_validation"] }
dashcore_hashes = { path = "../hashes" }
key-wallet = { path = "../key-wallet" }
key-wallet-manager = { path = "../key-wallet-manager" }

# BLS signatures
blsful = { git = "https://github.com/dashpay/agora-blsful", rev = "0c34a7a488a0bd1c9a9a2196e793b303ad35c900" }

# CLI
clap = { version = "4.0", features = ["derive", "env"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"
tokio-stream = { version = "0.1", features = ["sync"] }
async-trait = "0.1"
futures = "0.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "2.0.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tracing-appender = "0.2"
chrono = "0.4.20"

# Utilities
rand = "0.8"
hex = "0.4"
indexmap = "2.0"

# Parallelization
rayon = "1.11"

# Terminal UI (optional)
crossterm = { version = "0.27", optional = true }

# DNS (trust-dns-resolver was renamed to hickory_resolver)
hickory-resolver = "0.25"

# Also add log to main dependencies for consistency
log = "0.4"

[dev-dependencies]
dash-spv = { path = ".", features = ["test-utils"] }
dashcore = { path = "../dash", features = ["test-utils"] }
key-wallet-manager = { path = "../key-wallet-manager", features = ["test-utils"] }
criterion = { version = "0.8.1", features = ["async_tokio"] }
tempfile = "3.0"
tokio-test = "0.4"
env_logger = "0.10"
hex = "0.4"
test-case = "3.3"

[[bench]]
name = "storage"
harness = false

[[bin]]
name = "dash-spv"
path = "src/main.rs"
required-features = ["terminal-ui"]

[lib]
name = "dash_spv"
path = "src/lib.rs"

[features]
# Terminal UI feature (off by default, for use by binary only)
terminal-ui = ["dep:crossterm"]
test-utils = []
