[package]
name = "dashcore"
version = { workspace = true }
authors = [
    "Samuel Westrich <sam@dash.org>",
    "Anton Suprunchuk <anton@dash.org>",
    "Dmitrii Golubev <dmitrii.golubev@dash.org>"
]
license = "CC0-1.0"
homepage = "https://github.com/dashevo/rust-dashcore/"
repository = "https://github.com/dashevo/rust-dashcore/"
documentation = "https://dashcore.readme.io/docs"
description = "General purpose library for using and interoperating with Dash Core payment chain."
categories = ["cryptography::cryptocurrencies"]
keywords = [ "crypto", "dash" ]
readme = "../README.md"
exclude = ["tests", "contrib"]
edition = "2024"

# Please don't forget to add relevant features to docs.rs below
[features]
default = ["secp-recovery", "bincode" ]
base64 = [ "base64-compat" ]
rand-std = ["secp256k1/rand"]
rand = ["secp256k1/rand"]
serde = ["dep:serde", "dashcore_hashes/serde", "secp256k1/serde"]
secp-lowmemory = ["secp256k1/lowmemory"]
secp-recovery = ["secp256k1/recovery"]
signer = ["secp-recovery", "rand", "base64"]
core-block-hash-use-x11 = ["dashcore_hashes/x11"]
bls = ["blsful"]
eddsa = ["ed25519-dalek"]
quorum_validation = ["bls"]
message_verification = ["bls"]
bincode = [ "dep:bincode", "dep:bincode_derive", "dashcore_hashes/bincode" ]
ffi = []
test-utils = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
internals = { path = "../internals", package = "dashcore-private" }
bech32 = { version = "0.9.1" }
dashcore_hashes = { path = "../hashes" }
secp256k1 = { features = ["hashes"], version= "0.30.0" }
rustversion = { version="1.0.20"}
serde = { version = "1.0.219", default-features = false, features = [ "derive", "alloc" ], optional = true }

base64-compat = { version = "1.0.0", optional = true }
bitcoinconsensus = { version = "0.20.2-0.5.0", default-features = false, optional = true }
hex_lit = "0.1.1"
anyhow = { version= "1.0" }
hex = { version= "0.4" }
bincode = { version = "2.0.1", optional = true }
bincode_derive = { version = "2.0.1", optional = true }
blsful = { git = "https://github.com/dashpay/agora-blsful", rev = "0c34a7a488a0bd1c9a9a2196e793b303ad35c900", optional = true }
ed25519-dalek = { version = "2.1", features = ["rand_core"], optional = true }
blake3 = "1.8.1"
thiserror = "2"
bitvec = "1.0"
tracing = "0.1"

[dev-dependencies]
serde_json = "1.0.140"
serde_test = "1.0.177"
serde_derive = "1.0.219"
secp256k1 = { features = [ "recovery", "rand", "hashes" ], version="0.30.0" }
bincode = { version = "2.0.1" }
assert_matches = "1.5.0"
dashcore = { path = ".", features = ["core-block-hash-use-x11", "message_verification", "quorum_validation", "signer"] }
criterion = "0.5"
key-wallet = { path = "../key-wallet" }

[build-dependencies]
cbindgen = "0.29"

[[example]]
name = "handshake"

[[example]]
name = "ecdsa-psbt"
required-features = ["bitcoinconsensus"]

[[example]]
name = "taproot-psbt"
required-features = ["rand-std", "bitcoinconsensus"]

[[bench]]
name = "transaction"
harness = false

[lints.rust]
unexpected_cfgs = { level = "deny", check-cfg = ['cfg(bench)', 'cfg(fuzzing)', 'cfg(kani)'] }
