[package]
name = "dashcore_hashes"
version = { workspace = true}
authors = ["Samuel Westrich <sam@dash.org>"]
license = "CC0-1.0"
repository = "https://github.com/rust-dashcore/dash_hashes/"
documentation = "https://docs.rs/dash_hashes/"
description = "Hash functions used by the rust-dash eccosystem"
categories = ["algorithms"]
keywords = [ "crypto", "dash", "hash", "digest" ]
readme = "README.md"
edition = "2021"
exclude = ["tests", "contrib"]

[features]
default = []
schemars = ["actual-schemars"]
serde-std = ["serde/std"]
x11 = ["rs-x11-hash"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
internals = { path = "../internals", package = "dashcore-private" }

# Only enable this if you explicitly do not want to use "std", otherwise enable "serde-std".
serde = { version = "1.0.219", default-features = false, optional = true }
# Do NOT use this as a feature! Use the `schemars` feature instead. Can only be used with "std" enabled.
actual-schemars = { package = "schemars", version = "1.0", optional = true }

rs-x11-hash = { version = "0.1.8", optional = true }
bincode = { version = "2.0.1", optional = true }

[dev-dependencies]
serde_test = "1.0"
serde_json = "1.0"
criterion = "0.5"

[target.wasm32-unknown-unknown.dev-dependencies]
wasm-bindgen-test = "0.3"

[[bench]]
name = "hashes"
harness = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(bench)', 'cfg(fuzzing)'] }
