[package]
name = "key-wallet-ffi"
version = { workspace = true }
authors = ["The Dash Core Developers"]
edition = "2021"
description = "FFI bindings for key-wallet library"
keywords = ["dash", "wallet", "ffi", "bindings"]
readme = "README.md"
license = "CC0-1.0"

[lib]
name = "key_wallet_ffi"
crate-type = ["cdylib", "staticlib", "lib"]

[features]
default = ["bincode", "eddsa", "bls", "bip38"]
bip38 = ["key-wallet/bip38"]
bincode = ["key-wallet-manager/bincode", "key-wallet/bincode"]
eddsa = ["dashcore/eddsa", "key-wallet/eddsa"]
bls = ["dashcore/bls", "key-wallet/bls"]

[dependencies]
key-wallet = { path = "../key-wallet", default-features = false, features = ["std"] }
key-wallet-manager = { path = "../key-wallet-manager", features = ["std"] }
dashcore = { path = "../dash", features = ["std"] }
secp256k1 = { version = "0.30.0", features = ["global-context"] }
tokio = { version = "1.32", features = ["rt-multi-thread", "sync"] }
libc = "0.2"
hex = "0.4"

[build-dependencies]
cbindgen = "0.29"

[dev-dependencies]
key-wallet = { path = "../key-wallet", default-features = false, features = ["std", "test-utils"] }
tempfile = "3.0"
hex = "0.4"
