[package]
name = "key-wallet-ffi"
version = { workspace = true }
authors = ["The Dash Core Developers"]
edition = "2021"
description = "FFI bindings for key-wallet library"
keywords = ["dash", "wallet", "ffi", "bindings"]
readme = "README.md"
license = "CC0-1.0"

[lib]
name = "key_wallet_ffi"
crate-type = ["cdylib", "staticlib", "lib"]

[features]
default = ["bincode", "eddsa", "bls", "bip38"]
bip38 = ["key-wallet/bip38"]
bincode = ["key-wallet/bincode", "key-wallet-manager/bincode"]
eddsa = ["dashcore/eddsa", "key-wallet/eddsa"]
bls = ["dashcore/bls", "key-wallet/bls"]
# Forward to `key-wallet/keep-finalized-transactions` (via key-wallet-manager).
# With this on, every processed transaction (including chainlocked ones)
# stays in the in-memory `transactions` map for the wallet's lifetime.
# With it off (the default), records of chainlocked transactions are
# dropped and only their txids are kept (in `finalized_txids`) for dedup.
# See `key-wallet`'s feature documentation for details.
keep-finalized-transactions = [
    "key-wallet/keep-finalized-transactions",
    "key-wallet-manager/keep-finalized-transactions",
]

[dependencies]
key-wallet = { path = "../key-wallet" }
key-wallet-manager = { path = "../key-wallet-manager" }
dashcore = { path = "../dash" }
dash-network = { path = "../dash-network", features = ["ffi"] }
secp256k1 = { version = "0.30.0", features = ["global-context"] }
tokio = { version = "1.32", features = ["rt-multi-thread", "sync"] }
libc = "0.2"
hex = "0.4"

[build-dependencies]
cbindgen = "0.29"

[dev-dependencies]
key-wallet = { path = "../key-wallet", features = ["test-utils"] }
key-wallet-manager = { path = "../key-wallet-manager", features = ["test-utils"] }
hex = "0.4"
