[package]
name = "key-wallet-manager"
version = { workspace = true }
authors = ["The Dash Core Developers"]
edition = "2021"
description = "High-level wallet management for Dash using key-wallet primitives"
keywords = ["dash", "wallet", "transaction", "utxo", "hdwallet"]
readme = "README.md"
license = "CC0-1.0"

[features]
default = ["std", "bincode"]
std = ["key-wallet/std", "dashcore/std", "secp256k1/std"]
serde = ["dep:serde", "key-wallet/serde", "dashcore/serde"]
getrandom = ["key-wallet/getrandom"]
bincode = ["dep:bincode", "key-wallet/bincode"]
test-utils = []

[dependencies]
key-wallet = { path = "../key-wallet", default-features = false }
dashcore = { path = "../dash", default-features = false }
dashcore_hashes = { path = "../hashes" }
secp256k1 = { version = "0.30.0", default-features = false, features = ["recovery"] }
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }
async-trait = "0.1"
bincode = { version = "2.0.1", optional = true }
zeroize = { version = "1.8", features = ["derive"] }
rayon = "1.11"
tokio = { version = "1.32", features = ["full"] }

[dev-dependencies]
dashcore = { path = "../dash", features = ["test-utils"] }
hex = "0.4"
serde_json = "1.0"

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(bench)', 'cfg(fuzzing)'] }
