[package]
name = "key-wallet-manager"
version = { workspace = true }
authors = ["The Dash Core Developers"]
edition = "2021"
description = "High-level wallet management for Dash (WalletManager, WalletInterface, events, compact filters)"
keywords = ["dash", "wallet", "manager", "spv"]
license = "CC0-1.0"

[features]
default = []
parallel-filters = ["dep:rayon"]
bincode = ["key-wallet/bincode", "dep:bincode"]
test-utils = ["key-wallet/test-utils"]
bls = ["key-wallet/bls"]
eddsa = ["key-wallet/eddsa"]

[dependencies]
key-wallet = { path = "../key-wallet", default-features = false }
dashcore = { path = "../dash" }
async-trait = "0.1"
tokio = { version = "1", features = ["macros", "rt", "sync"] }
tracing = "0.1"
zeroize = { version = "1.8", features = ["derive"] }
rayon = { version = "1.11", optional = true }
bincode = { version = "2.0.1", optional = true }

[dev-dependencies]
key-wallet = { path = "../key-wallet", features = ["test-utils", "bincode"] }
dashcore = { path = "../dash", features = ["test-utils"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
hex = "0.4"

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(bench)', 'cfg(fuzzing)'] }
