[package]
name = "key-wallet"
version = { workspace = true }
authors = ["The Dash Core Developers"]
edition = "2021"
description = "Key derivation and wallet functionality for Dash"
keywords = ["dash", "wallet", "bip32", "bip39", "hdwallet"]
readme = "README.md"
license = "CC0-1.0"

[features]
default = ["std"]
std = ["secp256k1/std", "bip39/std", "getrandom", "rand"]
serde = ["dep:serde", "dep:serde_json", "dashcore_hashes/serde", "secp256k1/serde", "dashcore/serde"]
bincode = ["serde", "dep:bincode", "dep:bincode_derive", "dashcore_hashes/bincode", "dashcore/bincode"]
bip38 = ["scrypt", "aes", "bs58", "rand"]
eddsa = ["dashcore/eddsa"]
bls = ["dashcore/bls"]
test-utils = ["dashcore/test-utils"]

[dependencies]
internals = { path = "../internals", package = "dashcore-private" }
dashcore_hashes = { path = "../hashes" }
dashcore = { path="../dash" }
secp256k1 = { version = "0.30.0", default-features = false, features = ["hashes", "recovery"] }
bip39 = { version = "2.2.0", default-features = false, features = ["chinese-simplified", "chinese-traditional", "czech", "french", "italian", "japanese", "korean", "portuguese", "spanish", "zeroize"] }
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }
base58ck = { version = "0.1.0", default-features = false }
bitflags = { version = "2.6", default-features = false }
getrandom = { version = "0.2", optional = true }
# BIP38 dependencies (optional)
scrypt = { version = "0.11", default-features = false, optional = true }
aes = { version = "0.8", default-features = false, optional = true }
sha2 = { version = "0.10", default-features = false }
bs58 = { version = "0.5", default-features = false, features = ["check", "alloc"], optional = true }
rand = { version = "0.8", default-features = false, features = ["std", "std_rng"], optional = true }
# Serialization
bincode = { version = "2.0.1", optional = true }
bincode_derive = { version = "2.0.1", optional = true }
base64 = { version = "0.22", optional = true }
serde_json = { version = "1.0", optional = true }
hex = { version = "0.4"}
zeroize = { version = "1.8", features = ["derive"] }
tracing = "0.1"
async-trait = "0.1"

[dev-dependencies]
dashcore = { path="../dash", features = ["test-utils"] }
hex = "0.4"
key-wallet = { path = ".", features = ["test-utils", "bip38", "serde", "bincode", "eddsa", "bls"] }
tokio = { version = "1", features = ["macros", "rt"] }
test-case = "3.3"
