[package]
name = "integration_test"
authors = ["Steven Roose <steven@stevenroose.org>"]
license = "CC0-1.0"
edition = "2024"
publish = false

[dependencies]
dashcore-rpc = { path = "../rpc-client" }
lazy_static = "1.4.0"
hex = "0.4.3"
dotenvy = "0.15.7"
tracing = "0.1"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
